[package]
name = "esp-idf-wifi-tk"
version = "0.1.0"
authors = ["jrt <lucasjrt99@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-idf-wifi-tk"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
button-driver = { version = "0.2.3", features = ["std", "embedded_hal"] }

[build-dependencies]
embuild = "0.33"
